# halo

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: editor.rs  main.rs  preferences.rs  theme.rs  viewer.rs
src/editor/: file.rs  highlighter.rs  validation.rs
src/viewer/: pipeline.rs  primitive.rs  uniforms.rs
