[package]
name = "halo"
version = "0.1.0"
edition = "2024"
authors = ["Shan <shankern@protonmail.com>"]

[dependencies]
bytemuck = "1.24"
thiserror = "2.0"
rfd = "0.15"
once_cell = "1.21"
syntect = "5.3.0"
serde_json = "1.0.145"
lucide-icons = "0.545.0"

[dependencies.iced]
version = "0.13"
features = ["advanced", "web-colors", "tokio", "debug", "highlighter"]

[dependencies.naga]
version = "27"
features = ["wgsl-in"]

[dependencies.glam]
version = "0.30"
features = ["bytemuck"]

[dependencies.tokio]
version = "1.47"
features = ["fs"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]

